# simple-rust-server

./: .gitignore  Cargo.toml  README.md  config-sample.json
sql/: init.sql
src/: main.rs
src/controller/: user.rs
src/entity/: datastore.rs  mod.rs  token.rs  user.rs
src/handle/: handle.rs  mod.rs
src/model/: db.rs  mod.rs  todo.rs
